added translation to all other pages and sorted translation file

--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,19 +1,67 @@
-
-    {
-        "no-group-warning" : "Il semble que vous n'appartenez à aucun groupe de discussion",
-        "join-to-start" : "Rejoignez un groupe existant ou créez en un nouveau pour commencer à échanger des idées cadeaux avec vos amis !",
-        "my-groups-list" : "Liste de mes groupes",
-        "create-group" : "Créer un groupe",
-        "add-valid-email" : "Veuillez entrer une adresse e-mail valide.",
-        "email-already-added" : "Cet email est déjà ajouté.",
-        "group-name" : "Nom du groupe",
-        "placeholder-name-your-group" : "Donnez un nom à votre groupe",
-        "add-members" : "Ajouter des membres",
-        "placeholder-add-members-to-group" : "Ajoutez des membres à votre groupe",
-        "create" : "Créer",
-        "legal-notices" : "Mentions légales",
-        "sign-in" : "Se connecter",
-        "nav-my-profile" : "Mon profil",
-        "nav-my-groups" : "Mes groupes",
-        "sign-out" : "Se déconnecter"
-    }
+{
+    "add-members": "Ajouter des membres",
+    "add-valid-email": "Veuillez entrer une adresse e-mail valide.",
+    "already-have-an-account": "Déjà inscrit ?",
+    "character-limit": "Le mot de passe doit faire minimum 8 caractères",
+    "confirm-new-password": "Confirmer le nouveau mot de passe",
+    "confirm-password": "Confirmer le mot de passe",
+    "create": "Créer",
+    "create-account": "Créer un compte",
+    "create-group": "Créer un groupe",
+    "current-password": "Mot de passe actuel",
+    "delete-account": "Supprimer mon compte",
+    "description-success-password-modified": "Votre mot de passe a bien été modifié",
+    "description-success-profile-modified": "Votre profil a bien été modifié",
+    "description-success-signed-up": "Votre inscription a bien été prise en compte",
+    "email-adress": "Adresse mail",
+    "email-adress-invalid": "Cette adresse mail est invalide !",
+    "email-already-added": "Cet email est déjà ajouté.",
+    "email-already-existing": "Cette adresse mail existe déjà",
+    "firstname": "Prénom",
+    "forgot-password": "Mot de passe oublié ?",
+    "group-name": "Nom du groupe",
+    "heading-organize": "Organisez vos cadeaux de Noël en groupe avec",
+    "hello": "Bonjour",
+    "hide-password": "Masquer le mot de passe",
+    "incorrect-password": "Mot de passe incorrect",
+    "join-to-start": "Rejoignez un groupe existant ou créez en un nouveau pour commencer à échanger des idées cadeaux avec vos amis !",
+    "lastname": "Nom",
+    "legal-notices": "Mentions légales",
+    "modify": "Modifier",
+    "modify-old-password-is-different": "Le mot de passe n'est pas le même !",
+    "modify-password": "Modifier le mot de passe",
+    "modify-profile": "Modifier le profil",
+    "my-groups-list": "Liste de mes groupes",
+    "nav-my-groups": "Mes groupes",
+    "nav-my-profile": "Mon profil",
+    "new-password": "Nouveau mot de passe",
+    "no-account": "Pas de compte ?",
+    "no-group-warning": "Il semble que vous n'appartenez à aucun groupe de discussion",
+    "not-signed-up": "Pas encore inscrit ?",
+    "old-password": "Ancien mot de passe",
+    "password": "Mot de passe",
+    "password-lowercase": "Le mot de passe doit contenir une minuscule",
+    "password-number": "Le mot de passe doit contenir un chiffre",
+    "password-uppercase": "Le mot de passe doit contenir une majuscule",
+    "passwords-are-not-equals": "Les mots de passe ne correspondent pas !",
+    "placeholder-add-members-to-group": "Ajoutez des membres à votre groupe",
+    "placeholder-find-thread": "Trouver un fil de discussion",
+    "placeholder-name-your-group": "Donnez un nom à votre groupe",
+    "present-ideas": "Idées cadeaux pour",
+    "show-password": "Afficher le mot de passe",
+    "sign-in": "Se connecter",
+    "sign-out": "Se déconnecter",
+    "sign-up1": "Inscrivez-vous",
+    "sign-up2": "S'inscrire",
+    "step1": "Etape 1 : Créez votre cercle de Noël",
+    "step1-description": "Commencez par créer votre groupe familial ou entre amis pour organiser les cadeaux de Noël de manière collaboratives.",
+    "step2": "Etape 2 : Invitez vos amis et votre famille",
+    "step2-description": "Invitez chaque membre de votre groupe à rejoindre l'application pour qu'ils puissent suggérer des idées de cadeaux.",
+    "step3": "Etape 3 : Planifiez vos surprises de Noël",
+    "step3-description": "Créez des listes de cadeaux pour chaque membre du groupe, discutez des idées et choisissez les cadeaux parfaits pour faire de Noël une fête inoubliable.",
+    "success-password-modified": "Mot de passe modifié !",
+    "success-profile-modified": "Profil modifié !",
+    "success-signed-up": "Vous êtes bien enregistré.e",
+    "unauthorized-password": "Ce mot de passe n'est pas autorisé",
+    "welcome-back": "Bon retour"
+}
