sorted json translation files

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -2,12 +2,14 @@
     "add-members": "Add members",
     "add-valid-email": "Please add a valid email adress.",
     "already-have-an-account": "Already registered ?",
+    "cancel": "Cancel",
     "character-limit": "Password must be atleast 8 character long",
     "confirm-new-password": "Confirm the new password",
     "confirm-password": "Confirm password",
     "create": "Create",
     "create-account": "Create an account",
     "create-group": "Create a group",
+    "create-new-group-to-start": "Create a new group to start exchanging present ideas with your kin",
     "current-password": "Current password",
     "delete-account": "Delete my account",
     "description-success-password-modified": "Your password has been modified !",
@@ -36,6 +38,7 @@
     "nav-my-profile": "My profile",
     "new-password": "New password",
     "no-account": "No account ?",
+    "no-group": "You don't have any group",
     "no-group-warning": "It seems like you're not part of any chat group",
     "not-signed-up": "Not signed up yet ?",
     "old-password": "Old password",
@@ -44,6 +47,7 @@
     "password-number": "Password must contain a number",
     "password-uppercase": "Password must contain an uppercase letter",
     "passwords-are-not-equals": "Passwords are not corresponding !",
+    "placeholder-add-member-email": "Insert a member's email to add him",
     "placeholder-add-members-to-group": "Add members to your group",
     "placeholder-find-thread": "Find thread",
     "placeholder-name-your-group": "Give a name to your group",
@@ -63,9 +67,5 @@
     "success-profile-modified": "Profile modified !",
     "success-signed-up": "You are signed up !",
     "unauthorized-password": "This password isn't authorized",
-    "welcome-back": "Welcome back",
-    "no-group" : "You don't have any group",
-    "create-new-group-to-start" : "Create a new group to start exchanging present ideas with your kin",
-    "placeholder-add-member-email" : "Insert a member's email to add him",
-    "cancel" : "Cancel"
+    "welcome-back": "Welcome back"
 }
