--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -2,12 +2,14 @@
     "add-members": "Ajouter des membres",
     "add-valid-email": "Veuillez entrer une adresse e-mail valide.",
     "already-have-an-account": "Déjà inscrit ?",
+    "cancel": "Annuler",
     "character-limit": "Le mot de passe doit faire minimum 8 caractères",
     "confirm-new-password": "Confirmer le nouveau mot de passe",
     "confirm-password": "Confirmer le mot de passe",
     "create": "Créer",
     "create-account": "Créer un compte",
     "create-group": "Créer un groupe",
+    "create-new-group-to-start": "Créez un nouveau groupe pour commencer à échanger des idées cadeaux avec vos proches",
     "current-password": "Mot de passe actuel",
     "delete-account": "Supprimer mon compte",
     "description-success-password-modified": "Votre mot de passe a bien été modifié",
@@ -36,6 +38,7 @@
     "nav-my-profile": "Mon profil",
     "new-password": "Nouveau mot de passe",
     "no-account": "Pas de compte ?",
+    "no-group": "Vous n'avez aucun groupe de discussion",
     "no-group-warning": "Il semble que vous n'appartenez à aucun groupe de discussion",
     "not-signed-up": "Pas encore inscrit ?",
     "old-password": "Ancien mot de passe",
@@ -44,6 +47,7 @@
     "password-number": "Le mot de passe doit contenir un chiffre",
     "password-uppercase": "Le mot de passe doit contenir une majuscule",
     "passwords-are-not-equals": "Les mots de passe ne correspondent pas !",
+    "placeholder-add-member-email": "Saisissez l'email d'un membre à ajouter",
     "placeholder-add-members-to-group": "Ajoutez des membres à votre groupe",
     "placeholder-find-thread": "Trouver un fil de discussion",
     "placeholder-name-your-group": "Donnez un nom à votre groupe",
@@ -63,9 +67,5 @@
     "success-profile-modified": "Profil modifié !",
     "success-signed-up": "Vous êtes bien enregistré.e",
     "unauthorized-password": "Ce mot de passe n'est pas autorisé",
-    "welcome-back": "Bon retour",
-    "no-group" : "Vous n'avez aucun groupe de discussion",
-    "create-new-group-to-start" : "Créez un nouveau groupe pour commencer à échanger des idées cadeaux avec vos proches",
-    "placeholder-add-member-email" : "Saisissez l'email d'un membre à ajouter",
-    "cancel" : "Annuler"
+    "welcome-back": "Bon retour"
 }
