--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,71 +1,113 @@
 {
-    "add-members": "Ajouter des membres",
-    "add-valid-email": "Veuillez entrer une adresse e-mail valide.",
-    "already-have-an-account": "Déjà inscrit ?",
-    "cancel": "Annuler",
-    "character-limit": "Le mot de passe doit faire minimum 8 caractères",
-    "confirm-new-password": "Confirmer le nouveau mot de passe",
-    "confirm-password": "Confirmer le mot de passe",
-    "create": "Créer",
-    "create-account": "Créer un compte",
-    "create-group": "Créer un groupe",
-    "create-new-group-to-start": "Créez un nouveau groupe pour commencer à échanger des idées cadeaux avec vos proches",
-    "current-password": "Mot de passe actuel",
-    "delete-account": "Supprimer mon compte",
-    "description-success-password-modified": "Votre mot de passe a bien été modifié",
-    "description-success-profile-modified": "Votre profil a bien été modifié",
-    "description-success-signed-up": "Votre inscription a bien été prise en compte",
-    "email-adress": "Adresse mail",
-    "email-adress-invalid": "Cette adresse mail est invalide !",
-    "email-already-added": "Cet email est déjà ajouté.",
-    "email-already-existing": "Cette adresse mail existe déjà",
-    "firstname": "Prénom",
-    "forgot-password": "Mot de passe oublié ?",
-    "group-name": "Nom du groupe",
-    "heading-organize": "Organisez vos cadeaux de Noël en groupe avec",
-    "hello": "Bonjour",
-    "hide-password": "Masquer le mot de passe",
-    "incorrect-password": "Mot de passe incorrect",
-    "join-to-start": "Rejoignez un groupe existant ou créez en un nouveau pour commencer à échanger des idées cadeaux avec vos amis !",
-    "lastname": "Nom",
-    "legal-notices": "Mentions légales",
-    "modify": "Modifier",
-    "modify-old-password-is-different": "Le mot de passe n'est pas le même !",
-    "modify-password": "Modifier le mot de passe",
-    "modify-profile": "Modifier le profil",
-    "my-groups-list": "Vous êtes membre de",
-    "nav-my-groups": "Mes groupes",
-    "nav-my-profile": "Mon profil",
-    "new-password": "Nouveau mot de passe",
-    "no-account": "Pas de compte ?",
-    "no-group": "Vous n'avez aucun groupe de discussion",
-    "no-group-warning": "Il semble que vous n'appartenez à aucun groupe de discussion",
-    "not-signed-up": "Pas encore inscrit ?",
-    "old-password": "Ancien mot de passe",
-    "password": "Mot de passe",
+  "add-members": "Ajouter des membres",
+  "add-valid-email": "Veuillez entrer une adresse e-mail valide.",
+  "already-have-an-account": "Déjà inscrit ?",
+  "button": {
+    "validate": "Valider"
+  },
+  "cancel": "Annuler",
+  "character-limit": "Le mot de passe doit faire minimum 8 caractères",
+  "complete-profile": "Complétez votre profil",
+  "confirm-new-password": "Confirmer le nouveau mot de passe",
+  "confirm-password": "Confirmer le mot de passe",
+  "create": "Créer",
+  "create-account": "Créer un compte",
+  "create-group": "Créer un groupe",
+  "create-new-group-to-start": "Créez un nouveau groupe pour commencer à échanger des idées cadeaux avec vos proches",
+  "current-password": "Mot de passe actuel",
+  "delete-account": "Supprimer mon compte",
+  "description-success-password-modified": "Votre mot de passe a bien été modifié",
+  "description-success-profile-modified": "Votre profil a bien été modifié",
+  "description-success-signed-up": "Votre inscription a bien été prise en compte",
+  "email-adress": "Adresse mail",
+  "email-adress-invalid": "Cette adresse mail est invalide !",
+  "email-already-added": "Cet email est déjà ajouté.",
+  "email-already-existing": "Cette adresse mail existe déjà",
+  "firstname": "Prénom",
+  "forgot-password": "Mot de passe oublié ?",
+  "group-name": "Nom du groupe",
+  "heading-organize": "Organisez vos cadeaux de Noël en groupe avec",
+  "hello": "Bonjour",
+  "hide-password": "Masquer le mot de passe",
+  "incorrect-password": "Mot de passe incorrect",
+  "join-to-start": "Rejoignez un groupe existant ou créez en un nouveau pour commencer à échanger des idées cadeaux avec vos amis !",
+  "lastname": "Nom",
+  "legal-notices": "Mentions légales",
+  "modify": "Modifier",
+  "modify-old-password-is-different": "Le mot de passe n'est pas le même !",
+  "modify-password": "Modifier le mot de passe",
+  "modify-profile": "Modifier le profil",
+  "my-groups-list": "Vous êtes membre de",
+  "nav-my-groups": "Mes groupes",
+  "nav-my-profile": "Mon profil",
+  "new-password": "Nouveau mot de passe",
+  "no-account": "Pas de compte ?",
+  "no-group": "Vous n'avez aucun groupe de discussion",
+  "no-group-warning": "Il semble que vous n'appartenez à aucun groupe de discussion",
+  "not-signed-up": "Pas encore inscrit ?",
+  "old-password": "Ancien mot de passe",
+  "password": "Mot de passe",
+  "password-configuration": "Configurez votre mot de passe",
+  "password-confirm": "Confirmez votre mot de passe",
+  "password-lowercase": "Le mot de passe doit contenir une minuscule",
+  "password-new": "Ajoutez un mot de passe",
+  "password-number": "Le mot de passe doit contenir un chiffre",
+  "password-uppercase": "Le mot de passe doit contenir une majuscule",
+  "passwords-are-not-equals": "Les mots de passe ne correspondent pas !",
+  "placeholder-add-member-email": "Saisissez l'email d'un membre à ajouter",
+  "placeholder-add-members-to-group": "Ajoutez des membres à votre groupe",
+  "placeholder-find-thread": "Trouver un fil de discussion",
+  "placeholder-name-your-group": "Donnez un nom à votre groupe",
+  "placeholder": {
+    "firstname": "Votre prénom",
+    "lastname": "Votre nom",
+    "password": "Votre mot de passe"
+  },
+  "present-ideas": "Idées cadeaux pour",
+  "show-password": "Afficher le mot de passe",
+  "sign-in": "Se connecter",
+  "sign-out": "Se déconnecter",
+  "sign-up1": "Inscrivez-vous",
+  "sign-up2": "S'inscrire",
+  "step1": "Etape 1 : Créez votre cercle de Noël",
+  "step1-description": "Commencez par créer votre groupe familial ou entre amis pour organiser les cadeaux de Noël de manière collaboratives.",
+  "step2": "Etape 2 : Invitez vos amis et votre famille",
+  "step2-description": "Invitez chaque membre de votre groupe à rejoindre l'application pour qu'ils puissent suggérer des idées de cadeaux.",
+  "step3": "Etape 3 : Planifiez vos surprises de Noël",
+  "step3-description": "Créez des listes de cadeaux pour chaque membre du groupe, discutez des idées et choisissez les cadeaux parfaits pour faire de Noël une fête inoubliable.",
+  "success-password-modified": "Mot de passe modifié !",
+  "success-profile-modified": "Profil modifié !",
+  "success-signed-up": "Vous êtes bien enregistré.e",
+  "toast": {
+    "error": {
+      "create-group": "Une erreur est survenue lors de la création du groupe",
+      "generic-title": "Erreur",
+      "validate-profile": "Une erreur est survenue lors de la validation du profil"
+    },
+    "success": {
+      "group-created-description": "Votre groupe {{groupName}} a été créé avec succès.",
+      "group-created-title": "Groupe créé",
+      "validate-profile-title": "Profil validé",
+      "validate-profile-description": "Votre profil a été validé avec succès."
+    }
+  },
+  "unauthorized-password": "Ce mot de passe n'est pas autorisé",
+  "validate-data": {
+    "email-already-used": "Cet e-mail est déjà ajouté.",
+    "email-type": "L'adresse e-mail doit être au format 'nom@domaine.com'.",
+    "firstname-length": "Le prénom doit contenir au moins 2 caractères.",
+    "firstname-type": "Le prénom ne doit contenir que des lettres.",
+    "group-name": "Le nom de groupe '{{groupName}}' existe déjà",
+    "group-name-length": "Le nom du groupe doit contenir au moins 2 caractères.",
+    "helper-password": "Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscule, un chiffre et un caractère spécial.",
+    "lastname-length": "Le nom doit contenir au moins 2 caractères.",
+    "lastname-type": "Le nom ne doit contenir que des lettres.",
+    "password-equal": "Les mots de passe ne correspondent pas",
+    "password-length": "Le mot de passe doit faire minimum 8 caractères",
     "password-lowercase": "Le mot de passe doit contenir une minuscule",
     "password-number": "Le mot de passe doit contenir un chiffre",
-    "password-uppercase": "Le mot de passe doit contenir une majuscule",
-    "passwords-are-not-equals": "Les mots de passe ne correspondent pas !",
-    "placeholder-add-member-email": "Saisissez l'email d'un membre à ajouter",
-    "placeholder-add-members-to-group": "Ajoutez des membres à votre groupe",
-    "placeholder-find-thread": "Trouver un fil de discussion",
-    "placeholder-name-your-group": "Donnez un nom à votre groupe",
-    "present-ideas": "Idées cadeaux pour",
-    "show-password": "Afficher le mot de passe",
-    "sign-in": "Se connecter",
-    "sign-out": "Se déconnecter",
-    "sign-up1": "Inscrivez-vous",
-    "sign-up2": "S'inscrire",
-    "step1": "Etape 1 : Créez votre cercle de Noël",
-    "step1-description": "Commencez par créer votre groupe familial ou entre amis pour organiser les cadeaux de Noël de manière collaboratives.",
-    "step2": "Etape 2 : Invitez vos amis et votre famille",
-    "step2-description": "Invitez chaque membre de votre groupe à rejoindre l'application pour qu'ils puissent suggérer des idées de cadeaux.",
-    "step3": "Etape 3 : Planifiez vos surprises de Noël",
-    "step3-description": "Créez des listes de cadeaux pour chaque membre du groupe, discutez des idées et choisissez les cadeaux parfaits pour faire de Noël une fête inoubliable.",
-    "success-password-modified": "Mot de passe modifié !",
-    "success-profile-modified": "Profil modifié !",
-    "success-signed-up": "Vous êtes bien enregistré.e",
-    "unauthorized-password": "Ce mot de passe n'est pas autorisé",
-    "welcome-back": "Bon retour"
+    "password-special": "Le mot de passe doit contenir un caractère spécial",
+    "password-uppercase": "Le mot de passe doit contenir une majuscule"
+  },
+  "welcome-back": "Bon retour"
 }
