--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -87,12 +87,18 @@
   "success-signed-up": "You are signed up !",
   "toast": {
     "error": {
+      "add-member": "An error occurred while adding the members",
+      "add-member-exist": "The user with the email {{email}} is already a member of the group",
+      "add-member-provided": "Please provide at least one member",
+      "add-member-title": "Error while adding a member",
       "create-group": "An error occurred while creating the group",
       "generic-title": "Error",
       "generic-description": "An error occurred",
       "validate-profile": "An error occurred during profile validation"
     },
     "success": {
+      "add-member-description": "The members have been successfully added.",
+      "add-member-title": "Members added",
       "delete-group-description": "Your group {{groupName}} has been successfully deleted.",
       "delete-group-title": "Group deleted",
       "group-created-description": "Your group {{groupName}} has been successfully created.",
@@ -104,6 +110,7 @@
   "unauthorized-password": "This password isn't authorized",
   "validate-data": {
     "email-already-used": "This email is already added.",
+    "email-list": "Please add the member to the list",
     "email-type": "The email address must be in the format 'name@domain.com'.",
     "firstname-length": "The first name must contain at least 2 characters.",
     "firstname-type": "The first name must contain only letters.",
