--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -44,7 +44,8 @@
   "modify-old-password-is-different": "Le mot de passe n'est pas le même !",
   "modify-password": "Modifier le mot de passe",
   "modify-profile": "Modifier le profil",
-  "my-groups-list": "Vous êtes membre de",
+  "my-group": "Vous êtes membre de {{groupCount}} groupe",
+  "my-groups-list": "Vous êtes membre de {{groupCount}} groupes",
   "nav-my-groups": "Mes groupes",
   "nav-my-profile": "Mon profil",
   "new-password": "Nouveau mot de passe",
@@ -68,7 +69,8 @@
   "placeholder": {
     "firstname": "Votre prénom",
     "lastname": "Votre nom",
-    "password": "Votre mot de passe"
+    "password": "Votre mot de passe",
+    "search-group": "Rechercher un groupe"
   },
   "present-ideas": "Idées cadeaux pour",
   "show-password": "Afficher le mot de passe",
