--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -30,6 +30,13 @@
   "email-adress-invalid": "This email adress is invalid !",
   "email-already-added": "This email is already added.",
   "email-already-existing": "This email is already taken",
+  "error-messages": {
+    "not-found": "Oups, the requested page wasn't found",
+    "not-exist": "This page doesn't exist",
+    "unauthorized": "You're not authorized to see this page",
+    "result": "Oups, it seems like there's no result",
+    "generic": "An error occurred. Please try again later"
+  },
   "firstname": "Firstname",
   "forgot-password": "Forgot your password ?",
   "group-name": "Group name",
