--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1,4 +1,15 @@
 {
+  "about": {
+    "alexandre-description": "Passionate about Frontend development, Alexandre designed the user interface and implemented the threads.",
+    "alon-description": "Alon implemented the instant messaging system, allowing smooth communication between group members.",
+    "description1": "Gifty is an application that facilitates gift organization between friends and family. This project is developed as part of our learning at the Wild Code School.",
+    "description2": "We would like to thank the Wild Code School for their support and for giving us the opportunity to carry out this project.",
+    "dev-role": "Full-Stack Developer",
+    "jasmine-description": "Jasmine designed the group creation feature, ensuring Gifty is user-friendly and enjoyable to use.",
+    "our-team": "Our team",
+    "robin-description": "Robin developed the registration, login, and user profile management, ensuring account security.",
+    "title": "About"
+  },
   "add-members": "Add members",
   "add-valid-email": "Please add a valid email adress.",
   "alert": {
