--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,4 +1,15 @@
 {
+  "about": {
+    "alexandre-description": "Passionné par le développement Frontend, Alexandre a conçu l'interface utilisateur et implémenté les fils de discussions.",
+    "alon-description": "Alon a implémenté le système de messagerie instantanée, permettant une communication fluide entre les membres du groupe.",
+    "description1": "Gifty est une application qui facilite l'organisation des cadeaux entre amis et en famille. Ce projet est développé dans le cadre de notre apprentissage à la Wild Code School.",
+    "description2": "Nous tenons à remercier la Wild Code School pour leur soutien et pour nous avoir donné l'opportunité de réaliser ce projet.",
+    "dev-role": "Développeur Full-Stack",
+    "jasmine-description": "Jasmine a conçu la fonctionnalité de création de groupes en veillant à ce que Gifty soit convivial et agréable à utiliser.",
+    "our-team": "Notre team",
+    "robin-description": "Robin a développé l'inscription, la connexion, et la gestion des profils utilisateurs, garantissant la sécurité des comptes.",
+    "title": "A propos"
+  },
   "add-members": "Ajouter des membres",
   "add-valid-email": "Veuillez entrer une adresse e-mail valide.",
   "alert": {
