--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -105,9 +105,7 @@
       "create-group": "An error occurred while creating the group",
       "generic-description": "An error occurred",
       "generic-title": "Error",
-      "validate-profile": "An error occurred during profile validation",
-      "delete-wrong-user": "Unauthorized",
-      "delete-wrong-user-description": "You can't delete another user!"
+      "validate-profile": "An error occurred during profile validation"
     },
     "success": {
       "add-member-description": "The members have been successfully added.",
