--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -105,9 +105,7 @@
       "create-group": "Une erreur est survenue lors de la création du groupe",
       "generic-description": "Une erreur est survenue",
       "generic-title": "Erreur",
-      "validate-profile": "Une erreur est survenue lors de la validation du profil",
-      "delete-wrong-user": "Non autorisé",
-      "delete-wrong-user-description": "Vous ne pouvez pas supprimer un autre utilisateur!"
+      "validate-profile": "Une erreur est survenue lors de la validation du profil"
     },
     "success": {
       "add-member-description": "Les membres ont bien été ajoutés avec succès.",
